# vibehack

./: .gitignore
.antigravitycli/: a114c3ff-c5b8-48a7-8e1b-0bff74758c01.json
backend/: flush_ghost.sh  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  deps.py  rooms.py  users.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/sockets/: __init__.py  chat.py  connection.py  server.py
backend/app/utils/: identity.py
backend/tests/: conftest.py  test_auth.py  test_redis.py  test_rooms.py  test_sockets.py  test_users.py
frontend/: package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dashboard/: page.tsx
frontend/app/room/[roomName]/: page.tsx
frontend/lib/: api.ts
